// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupCardItem renders for join screen 1`] = `
<Card
  onPress={[Function]}
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "testUri": "../../../assets/images/impactBackground.png",
      }
    }
    style={
      Object {
        "height": 200,
        "width": "100%",
      }
    }
  />
  <Flex
    direction="row"
    justify="center"
    style={
      Object {
        "backgroundColor": "rgba(0, 0, 0, 0.6)",
        "bottom": 0,
        "left": 0,
        "padding": 13,
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <Flex
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "fontWeight": "bold",
          }
        }
      >
        GROUP NAME
      </MyText>
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 12,
          }
        }
      >
        7 Members  ·  Roge (Owner)
      </MyText>
    </Flex>
    <Flex
      direction="column"
      justify="center"
    >
      <Button
        buttonTextStyle={
          Object {
            "color": "#ffffff",
            "fontSize": 14,
          }
        }
        onPress={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "#FF5532",
              "borderRadius": 12,
              "margin": 5,
              "paddingHorizontal": 20,
              "paddingVertical": 5,
            },
          ]
        }
        text="JOIN"
        type="transparent"
      />
    </Flex>
  </Flex>
</Card>
`;

exports[`GroupCardItem renders user created group 1`] = `
<Card
  onPress={[Function]}
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "testUri": "../../../assets/images/impactBackground.png",
      }
    }
    style={
      Object {
        "height": 200,
        "width": "100%",
      }
    }
  />
  <Flex
    direction="row"
    justify="center"
    style={
      Object {
        "backgroundColor": "rgba(0, 0, 0, 0.6)",
        "bottom": 0,
        "left": 0,
        "padding": 13,
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <Flex
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "fontWeight": "bold",
          }
        }
      >
        GROUP NAME
      </MyText>
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 12,
          }
        }
      />
    </Flex>
  </Flex>
</Card>
`;

exports[`GroupCardItem renders with all report counts 1`] = `
<Card
  onPress={[Function]}
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "testUri": "../../../assets/images/impactBackground.png",
      }
    }
    style={
      Object {
        "height": 200,
        "width": "100%",
      }
    }
  />
  <Flex
    direction="row"
    justify="center"
    style={
      Object {
        "backgroundColor": "rgba(0, 0, 0, 0.6)",
        "bottom": 0,
        "left": 0,
        "padding": 13,
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <Flex
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "fontWeight": "bold",
          }
        }
      >
        GROUP NAME
      </MyText>
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 12,
          }
        }
      >
        768 Contacts   ·   13 Unassigned
      </MyText>
    </Flex>
  </Flex>
</Card>
`;

exports[`GroupCardItem renders with contacts, no unassigned 1`] = `
<Card
  onPress={[Function]}
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "testUri": "../../../assets/images/impactBackground.png",
      }
    }
    style={
      Object {
        "height": 200,
        "width": "100%",
      }
    }
  />
  <Flex
    direction="row"
    justify="center"
    style={
      Object {
        "backgroundColor": "rgba(0, 0, 0, 0.6)",
        "bottom": 0,
        "left": 0,
        "padding": 13,
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <Flex
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "fontWeight": "bold",
          }
        }
      >
        GROUP NAME
      </MyText>
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 12,
          }
        }
      >
        768 Contacts   ·   0 Unassigned
      </MyText>
    </Flex>
  </Flex>
</Card>
`;

exports[`GroupCardItem renders with image url 1`] = `
<Card
  onPress={[Function]}
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "url": "https://vignette.wikia.nocookie.net/edain-mod/images/6/6e/Mordor_Submod_Banner.jpg",
      }
    }
    style={
      Object {
        "height": 200,
        "width": "100%",
      }
    }
  />
  <Flex
    direction="row"
    justify="center"
    style={
      Object {
        "backgroundColor": "rgba(0, 0, 0, 0.6)",
        "bottom": 0,
        "left": 0,
        "padding": 13,
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <Flex
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "fontWeight": "bold",
          }
        }
      >
        GROUP NAME
      </MyText>
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 12,
          }
        }
      >
        0 Contacts   ·   0 Unassigned
      </MyText>
    </Flex>
  </Flex>
</Card>
`;

exports[`GroupCardItem renders with no report counts 1`] = `
<Card
  onPress={[Function]}
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "testUri": "../../../assets/images/impactBackground.png",
      }
    }
    style={
      Object {
        "height": 200,
        "width": "100%",
      }
    }
  />
  <Flex
    direction="row"
    justify="center"
    style={
      Object {
        "backgroundColor": "rgba(0, 0, 0, 0.6)",
        "bottom": 0,
        "left": 0,
        "padding": 13,
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <Flex
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "fontWeight": "bold",
          }
        }
      >
        GROUP NAME
      </MyText>
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 12,
          }
        }
      >
        0 Contacts   ·   0 Unassigned
      </MyText>
    </Flex>
  </Flex>
</Card>
`;

exports[`GroupCardItem renders with no report counts for user created org 1`] = `
<Card
  onPress={[Function]}
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "testUri": "../../../assets/images/impactBackground.png",
      }
    }
    style={
      Object {
        "height": 200,
        "width": "100%",
      }
    }
  />
  <Flex
    direction="row"
    justify="center"
    style={
      Object {
        "backgroundColor": "rgba(0, 0, 0, 0.6)",
        "bottom": 0,
        "left": 0,
        "padding": 13,
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <Flex
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "fontWeight": "bold",
          }
        }
      >
        GROUP NAME
      </MyText>
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 12,
          }
        }
      />
    </Flex>
  </Flex>
</Card>
`;

exports[`GroupCardItem renders with unassigned, no contacts 1`] = `
<Card
  onPress={[Function]}
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "testUri": "../../../assets/images/impactBackground.png",
      }
    }
    style={
      Object {
        "height": 200,
        "width": "100%",
      }
    }
  />
  <Flex
    direction="row"
    justify="center"
    style={
      Object {
        "backgroundColor": "rgba(0, 0, 0, 0.6)",
        "bottom": 0,
        "left": 0,
        "padding": 13,
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <Flex
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "fontWeight": "bold",
          }
        }
      >
        GROUP NAME
      </MyText>
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 12,
          }
        }
      >
        0 Contacts   ·   13 Unassigned
      </MyText>
    </Flex>
  </Flex>
</Card>
`;
